--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -1,15 +1,132 @@
-@book{koza92,
-		author    = "Koza, John R.",
-		title     = "Genetic Programming: On the Programming of Computers by Means of Natural Selection",
-		publisher = "MIT Press",
-		year      = "1992"
+@misc{ wiki:bs,
+    author = "Wikipedia",
+    title = "Background subtraction --- Wikipedia{,} The Free Encyclopedia",
+    year = "2016",
+    url = "\url{https://en.wikipedia.org/w/index.php?title=Background_subtraction&oldid=741230478}",
+    note = "[Online; Accedido 23-Septiembre-2016]"
+}
+ 
+@misc{ opencv:bs_tutorial,
+    author = "OpenCV",
+    title = "OpenCV Background Subtraction tutorial",
+    year = "2016",
+    url = "\url{http://docs.opencv.org/master/db/d5c/tutorial_py_bg_subtraction.html}",
+    note = "[Online; Accedido 26-Septiembre-2016]"
 }
 
+@book{ book:opencv_java,
+	title = {{OpenCV} 3.0 {Computer} {Vision} with {Java}},
+	abstract = {OpenCV 3.0 Computer Vision with Java is a practical tutorial guide that explains fundamental tasks from computer vision while focusing on Java development. This book will teach you how to set up OpenCV for Java and handle matrices using the basic operations of image processing such as filtering and image transforms. It will also help you learn how to use Haar cascades for tracking faces and to detect foreground and background regions with the help of a Kinect device. It will even give you insights into server-side OpenCV. Each chapter is presented with several projects that are ready to use. The functionality of these projects is found in many classes that allow developers to understand computer vision principles and rapidly extend or customize the projects for their needs.},
+	language = {Inglés},
+	publisher = {Packt Publishing},
+	author = {Baggio, Daniel Lélis},
+	month = jul,
+	year = {2015}
+}
 
-@misc{ wiki:latex,
-       author = "Wikipedia",
-       title = "LaTeX --- Wikipedia{,} La enciclopedia libre",
-       year = "2015",
-       url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
-       note = "[Internet; descargado 30-septiembre-2015]"
+@misc{ programarfacil:detmov,
+    author = "Luis del Valle Hernández",
+    title = "Detección de movimiento con OpenCV y Python",
+    year = "2016",
+    url = "\url{http://programarfacil.com/blog/vision-artificial/deteccion-de-movimiento-con-opencv-python/}",
+    note = "[Online; Accedido 5-Octubre-2016]"
+}
+
+@misc{ coursera:gmm,
+    author = "University of Pennsylvania",
+    title = "Robotics: Estimation and Learning: Gaussian Mixture Model (GMM)",
+    year = "2016",
+    url = "\url{https://www.coursera.org/learn/robotics-learning/lecture/XG0WD/1-4-1-gaussian-mixture-model-gmm/}",
+    note = "[Online; Accedido 5-Octubre-2016]"
+}
+
+@article{ art:yao_improved_2014,
+	title = {An {Improved} {Mixture}-of-{Gaussians} {Background} {Model} with {Frame} {Difference} and {Blob} {Tracking} in {Video} {Stream}},
+	volume = {2014},
+	issn = {2356-6140},
+	url = "\url{http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4000660/}",
+	doi = {10.1155/2014/424050},
+	abstract = {Modeling background and segmenting moving objects are significant techniques for computer vision applications. Mixture-of-Gaussians (MoG) background model is commonly used in foreground extraction in video steam. However considering the case that the objects enter the scenery and stay for a while, the foreground extraction would fail as the objects stay still and gradually merge into the background. In this paper, we adopt a blob tracking method to cope with this situation. To construct the MoG model more quickly, we add frame difference method to the foreground extracted from MoG for very crowded situations. What is more, a new shadow removal method based on RGB color space is proposed.},
+	urldate = {2016-10-12},
+	journal = {The Scientific World Journal},
+	author = {Yao, Li and Ling, Miaogen},
+	month = apr,
+	year = {2014},
+	pmid = {25161393},
+	pmcid = {PMC4000660},
+	file = {PubMed Central Full Text PDF:C\:\\Users\\ddmll\\AppData\\Roaming\\Mozilla\\Firefox\\Profiles\\g479gg1a.default\\zotero\\storage\\PU95EXAT\\Yao y Ling - 2014 - An Improved Mixture-of-Gaussians Background Model .pdf:application/pdf}
+}
+
+@inproceedings{ art:zivkovic_improved_2004,
+	address = {Washington, DC, USA},
+	series = {{ICPR} '04},
+	title = {Improved {Adaptive} {Gaussian} {Mixture} {Model} for {Background} {Subtraction}},
+	isbn = {978-0-7695-2128-2},
+	url = "\url{http://dx.doi.org/10.1109/ICPR.2004.479}",
+	doi = {10.1109/ICPR.2004.479},
+	abstract = {Background subtraction is a common computer vision task. We analyze the usual pixel-level approach. We develop an efficient adaptive algorithm using Gaussian mixture probability density. Recursive equations are used to constantly update the parameters and but also to simultaneously select the appropriate number of components for each pixel.},
+	urldate = {2016-10-12},
+	booktitle = {Proceedings of the {Pattern} {Recognition}, 17th {International} {Conference} on ({ICPR}'04) {Volume} 2 - {Volume} 02},
+	publisher = {IEEE Computer Society},
+	author = {Zivkovic, Zoran},
+	year = {2004},
+	pages = {28--31}
+}
+
+@article{ art:zivkovic_efficient_2006,
+	title = {Efficient {Adaptive} {Density} {Estimation} {Per} {Image} {Pixel} for the {Task} of {Background} {Subtraction}},
+	volume = {27},
+	issn = {0167-8655},
+	url = "\url{http://dx.doi.org/10.1016/j.patrec.2005.11.005}",
+	doi = {10.1016/j.patrec.2005.11.005},
+	abstract = {We analyze the computer vision task of pixel-level background subtraction. We present recursive equations that are used to constantly update the parameters of a Gaussian mixture model and to simultaneously select the appropriate number of components for each pixel. We also present a simple non-parametric adaptive density estimation method. The two methods are compared with each other and with some previously proposed algorithms.},
+	number = {7},
+	urldate = {2016-10-12},
+	journal = {Pattern Recogn. Lett.},
+	author = {Zivkovic, Zoran and van der Heijden, Ferdinand},
+	month = may,
+	year = {2006},
+	keywords = {Background subtraction, Gaussian mixture model, Non-parametric density estimation, On-line density estimation},
+	pages = {773--780}
+}
+
+@inproceedings{ art:li_foreground_2003,
+	address = {New York, NY, USA},
+	series = {{MULTIMEDIA} '03},
+	title = {Foreground {Object} {Detection} from {Videos} {Containing} {Complex} {Background}},
+	isbn = {978-1-58113-722-4},
+	url = "\url{http://doi.acm.org/10.1145/957013.957017}",
+	doi = {10.1145/957013.957017},
+	abstract = {This paper proposes a novel method for detection and segmentation of foreground objects from a video which contains both stationary and moving background objects and undergoes both gradual and sudden "once-off" changes. A Bayes decision rule for classification of background and foreground from selected feature vectors is formulated. Under this rule, different types of background objects will be classified from foreground objects by choosing a proper feature vector. The stationary background object is described by the color feature, and the moving background object is represented by the color co-occurrence feature. Foreground objects are extracted by fusing the classification results from both stationary and moving pixels. Learning strategies for the gradual and sudden "once-off" background changes are proposed to adapt to various changes in background through the video. The convergence of the learning process is proved and a formula to select a proper learning rate is also derived. Experiments have shown promising results in extracting foreground objects from many complex backgrounds including wavering tree branches, flickering screens and water surfaces, moving escalators, opening and closing doors, switching lights and shadows of moving objects.},
+	urldate = {2016-10-12},
+	booktitle = {Proceedings of the {Eleventh} {ACM} {International} {Conference} on {Multimedia}},
+	publisher = {ACM},
+	author = {Li, Liyuan and Huang, Weimin and Gu, Irene Y. H. and Tian, Qi},
+	year = {2003},
+	keywords = {background modeling, Bayes model, color co-occurrence, foreground segmentation, video processing, video surveillance},
+	pages = {2--10}
+}
+
+@misc{ github:background_segm,
+    author = "OpenCV",
+    title = "Interfaz BackgroundSubtractorMOG2 (background_segm.hpp)",
+    year = "2016",
+    url = "\url{https://github.com/opencv/opencv/blob/master/modules/video/include/opencv2/video/background_segm.hpp}",
+    note = "[Online; Accedido 12-Octubre-2016]"
+}
+
+@misc{ github:bgfg_gaussmix2,
+    author = "OpenCV",
+    title = "Implementación BackgroundSubtractorMOG2 (bgfg_gaussmix2.cpp)",
+    year = "2016",
+    url = "\url{https://github.com/opencv/opencv/blob/master/modules/video/src/bgfg_gaussmix2.cpp}",
+    note = "[Online; Accedido 12-Octubre-2016]"
+}
+
+@misc{ opencv:mog2,
+    author = "OpenCV",
+    title = "cv::BackgroundSubtractorMOG2 Class Reference",
+    year = "2016",
+    url = "\url{http://docs.opencv.org/3.1.0/d7/d7b/classcv_1_1BackgroundSubtractorMOG2.html}",
+    note = "[Online; Accedido 12-Octubre-2016]"
 }
