--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -2,7 +2,7 @@
     author = "Wikipedia",
     title = "Background subtraction --- Wikipedia{,} The Free Encyclopedia",
     year = "2016",
-    url = "\url{https://en.wikipedia.org/w/index.php?title=Background_subtraction&oldid=741230478}",
+    url = {https://en.wikipedia.org/w/index.php?title=Background_subtraction&oldid=741230478},
     note = "[Online; Accedido 23-Septiembre-2016]"
 }
  
@@ -10,7 +10,7 @@
     author = "OpenCV",
     title = "OpenCV Background Subtraction tutorial",
     year = "2016",
-    url = "\url{http://docs.opencv.org/master/db/d5c/tutorial_py_bg_subtraction.html}",
+    url = {http://docs.opencv.org/master/db/d5c/tutorial_py_bg_subtraction.html},
     note = "[Online; Accedido 26-Septiembre-2016]"
 }
 
@@ -28,7 +28,7 @@
     author = "Luis del Valle Hernández",
     title = "Detección de movimiento con OpenCV y Python",
     year = "2016",
-    url = "\url{http://programarfacil.com/blog/vision-artificial/deteccion-de-movimiento-con-opencv-python/}",
+    url = {http://programarfacil.com/blog/vision-artificial/deteccion-de-movimiento-con-opencv-python/},
     note = "[Online; Accedido 5-Octubre-2016]"
 }
 
@@ -36,7 +36,7 @@
     author = "University of Pennsylvania",
     title = "Robotics: Estimation and Learning: Gaussian Mixture Model (GMM)",
     year = "2016",
-    url = "\url{https://www.coursera.org/learn/robotics-learning/lecture/XG0WD/1-4-1-gaussian-mixture-model-gmm/}",
+    url = {https://www.coursera.org/learn/robotics-learning/lecture/XG0WD/1-4-1-gaussian-mixture-model-gmm/},
     note = "[Online; Accedido 5-Octubre-2016]"
 }
 
@@ -44,7 +44,7 @@
 	title = {An {Improved} {Mixture}-of-{Gaussians} {Background} {Model} with {Frame} {Difference} and {Blob} {Tracking} in {Video} {Stream}},
 	volume = {2014},
 	issn = {2356-6140},
-	url = "\url{http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4000660/}",
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4000660/},
 	doi = {10.1155/2014/424050},
 	abstract = {Modeling background and segmenting moving objects are significant techniques for computer vision applications. Mixture-of-Gaussians (MoG) background model is commonly used in foreground extraction in video steam. However considering the case that the objects enter the scenery and stay for a while, the foreground extraction would fail as the objects stay still and gradually merge into the background. In this paper, we adopt a blob tracking method to cope with this situation. To construct the MoG model more quickly, we add frame difference method to the foreground extracted from MoG for very crowded situations. What is more, a new shadow removal method based on RGB color space is proposed.},
 	urldate = {2016-10-12},
@@ -62,7 +62,7 @@
 	series = {{ICPR} '04},
 	title = {Improved {Adaptive} {Gaussian} {Mixture} {Model} for {Background} {Subtraction}},
 	isbn = {978-0-7695-2128-2},
-	url = "\url{http://dx.doi.org/10.1109/ICPR.2004.479}",
+	url = {http://dx.doi.org/10.1109/ICPR.2004.479},
 	doi = {10.1109/ICPR.2004.479},
 	abstract = {Background subtraction is a common computer vision task. We analyze the usual pixel-level approach. We develop an efficient adaptive algorithm using Gaussian mixture probability density. Recursive equations are used to constantly update the parameters and but also to simultaneously select the appropriate number of components for each pixel.},
 	urldate = {2016-10-12},
@@ -77,7 +77,7 @@
 	title = {Efficient {Adaptive} {Density} {Estimation} {Per} {Image} {Pixel} for the {Task} of {Background} {Subtraction}},
 	volume = {27},
 	issn = {0167-8655},
-	url = "\url{http://dx.doi.org/10.1016/j.patrec.2005.11.005}",
+	url = {http://dx.doi.org/10.1016/j.patrec.2005.11.005},
 	doi = {10.1016/j.patrec.2005.11.005},
 	abstract = {We analyze the computer vision task of pixel-level background subtraction. We present recursive equations that are used to constantly update the parameters of a Gaussian mixture model and to simultaneously select the appropriate number of components for each pixel. We also present a simple non-parametric adaptive density estimation method. The two methods are compared with each other and with some previously proposed algorithms.},
 	number = {7},
@@ -95,7 +95,7 @@
 	series = {{MULTIMEDIA} '03},
 	title = {Foreground {Object} {Detection} from {Videos} {Containing} {Complex} {Background}},
 	isbn = {978-1-58113-722-4},
-	url = "\url{http://doi.acm.org/10.1145/957013.957017}",
+	url = {http://doi.acm.org/10.1145/957013.957017},
 	doi = {10.1145/957013.957017},
 	abstract = {This paper proposes a novel method for detection and segmentation of foreground objects from a video which contains both stationary and moving background objects and undergoes both gradual and sudden "once-off" changes. A Bayes decision rule for classification of background and foreground from selected feature vectors is formulated. Under this rule, different types of background objects will be classified from foreground objects by choosing a proper feature vector. The stationary background object is described by the color feature, and the moving background object is represented by the color co-occurrence feature. Foreground objects are extracted by fusing the classification results from both stationary and moving pixels. Learning strategies for the gradual and sudden "once-off" background changes are proposed to adapt to various changes in background through the video. The convergence of the learning process is proved and a formula to select a proper learning rate is also derived. Experiments have shown promising results in extracting foreground objects from many complex backgrounds including wavering tree branches, flickering screens and water surfaces, moving escalators, opening and closing doors, switching lights and shadows of moving objects.},
 	urldate = {2016-10-12},
@@ -111,7 +111,7 @@
     author = "OpenCV",
     title = "Interfaz BackgroundSubtractorMOG2 (background_segm.hpp)",
     year = "2016",
-    url = "\url{https://github.com/opencv/opencv/blob/master/modules/video/include/opencv2/video/background_segm.hpp}",
+    url = {https://github.com/opencv/opencv/blob/master/modules/video/include/opencv2/video/background_segm.hpp},
     note = "[Online; Accedido 12-Octubre-2016]"
 }
 
@@ -119,7 +119,7 @@
     author = "OpenCV",
     title = "Implementación BackgroundSubtractorMOG2 (bgfg_gaussmix2.cpp)",
     year = "2016",
-    url = "\url{https://github.com/opencv/opencv/blob/master/modules/video/src/bgfg_gaussmix2.cpp}",
+    url = {https://github.com/opencv/opencv/blob/master/modules/video/src/bgfg_gaussmix2.cpp},
     note = "[Online; Accedido 12-Octubre-2016]"
 }
 
@@ -127,6 +127,6 @@
     author = "OpenCV",
     title = "cv::BackgroundSubtractorMOG2 Class Reference",
     year = "2016",
-    url = "\url{http://docs.opencv.org/3.1.0/d7/d7b/classcv_1_1BackgroundSubtractorMOG2.html}",
+    url = {http://docs.opencv.org/3.1.0/d7/d7b/classcv_1_1BackgroundSubtractorMOG2.html},
     note = "[Online; Accedido 12-Octubre-2016]"
 }
