Document pre and postprocessing #43

--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -130,3 +130,37 @@
     url = {http://docs.opencv.org/3.1.0/d7/d7b/classcv_1_1BackgroundSubtractorMOG2.html},
     note = "[Online; Accedido 12-Octubre-2016]"
 }
+
+@misc{ wiki:grayscale,
+    author = "Wikipedia",
+    title = "Grayscale --- Wikipedia{,} The Free Encyclopedia",
+    year = "2016",
+    url = {https://en.wikipedia.org/w/index.php?title=Grayscale&oldid=742147487},
+    note = "[Online; Accedido 18-Octubre-2016]"
+}
+
+@misc{ opencv:color_cvt,
+    author = "OpenCV",
+    title = "Color conversions",
+    year = "2016",
+    url = {http://docs.opencv.org/3.1.0/de/d25/imgproc_color_conversions.html},
+    note = "[Online; Accedido 18-Octubre-2016]"
+}
+
+@misc{ wiki:Gaussian,
+    author = "Wikipedia",
+    title = "Gaussian blur --- Wikipedia{,} The Free Encyclopedia",
+    year = "2016",
+    url = {https://en.wikipedia.org/w/index.php?title=Gaussian_blur&oldid=739396767},
+    note = "[Online; Accedido 18-Octubre-2016]"
+}
+
+@book{ book:mastering_opencv,
+    title = {Mastering {OpenCV} {Android} {Application} {Programming}},
+    abstract = {Master the art of implementing computer vision algorithms on Android platforms to build robust and efficient applicationsAbout This BookUnderstand and utilise the features of OpenCV, Android SDK, and OpenGLDetect and track specific objects in a video using Optical Flow and Lucas Kanade TrackerAn advanced guide full of real-world examples, helping you to build smart OpenCV Android applicationsWho This Book Is ForIf you are a Java and Android developer looking to enhance your skills by learning the latest features of OpenCV Android application programming, then this book is for you.What You Will LearnUnderstand image processing using OpenCVDetect specific objects in an image or video using various state-of-the-art feature-matching algorithms such as SIFT, SURF, and ORBPerform image transformations such as changing color, space, resizing, applying filters like Gaussian blur, and likesUse mobile phone cameras to interact with the real worldExplore face detection, object detection, and image stitching in OpenCV Android programmingBuild smarter applications by using machine learning algorithmsLearn to debug applications and create optimal custom algorithms by understanding how data is stored internallyIn DetailOpenCV is a famous computer vision library, used to analyze and transform copious amounts of image data, even in real time and on a mobile device.This book focuses on leveraging mobile platforms to build interactive and useful applications. The book starts off with an introduction to OpenCV and Android and how they interact with each other using OpenCV's Java API. You'll also discover basic image processing techniques such as erosion and dilation of images, before walking through how to build more complex applications, such as object detection, image stitching, and face detection. As you progress, you will be introduced to OpenCV's machine learning framework, enabling you to make your applications smarter.The book ends with a short chapter covering useful Android tips and tricks and some common errors and solutions that people might face while building an application. By the end of the book, readers will have gained more expertise in building their own OpenCV projects for the Android platform and integrating OpenCV application programming into existing projects.},
+    language = {Inglés},
+    publisher = {Packt Publishing},
+    author = {Kapur, Salil},
+    month = jul,
+    year = {2015}
+}
