--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -164,3 +164,19 @@
     month = jul,
     year = {2015}
 }
+
+@misc{ opencv:find_contours,
+    author = "OpenCV",
+    title = "Structural Analysis and Shape Descriptors",
+    year = "2016",
+    url = {docs.opencv.org/3.0-beta/modules/imgproc/doc/structural_analysis_and_shape_descriptors.html},
+    note = "[Online; Accedido 19-Octubre-2016]"
+}
+
+@misc{ opencv:contours,
+    author = "OpenCV",
+    title = "Contours in OpenCV",
+    year = "2016",
+    url = {http://docs.opencv.org/3.0-beta/doc/py_tutorials/py_imgproc/py_contours/py_table_of_contents_contours/py_table_of_contents_contours.html},
+    note = "[Online; Accedido 19-Octubre-2016]"
+}
